aktualizacja projektu do ARKANOID

--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,11 @@
 [SETTINGS]
 FPS = 60
 WIELKOSC_KAFLA = 32
-SZEROKOSC_EKRANU = 800
-WYSOKOSC_EKRANU = 608
-[DIRECTIONS]
-UP = 0
-RIGT = 1
-DOWN = 2
-LEFT = 3
-
+SZEROKOSC_EKRANU = 1024
+WYSOKOSC_EKRANU = 800
+PREDKOSC = 10
+[PATHS]
+tlo = images/background.png
+pilka = images/background.png
+cegla = images/background.png
+pad = images/background.png
