--- a/config.cfg
+++ b/config.cfg
@@ -6,6 +6,6 @@ WYSOKOSC_EKRANU = 800
 PREDKOSC = 10
 [PATHS]
 tlo = images/background.png
-pilka = images/background.png
-cegla = images/background.png
-pad = images/background.png
+pilka = images/ball.png
+cegla = images/brick.png
+pad = images/pad.png
